<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_result"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:src="@drawable/failed" />

        <TextView
            android:id="@+id/text_evaluation"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="serif-monospace"
            android:gravity="center_horizontal"
            android:text="@string/result_failed"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#000000" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="serif-monospace"
            android:gravity="center_horizontal"
            android:text="@string/result"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/score"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:padding="4dp"
            android:text="0"
            android:textColor="#000000"
            android:textSize="80sp" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:onClick="startOver"
        android:text="@string/start_over"
        android:textColor="#ffffff" />

</RelativeLayout>